great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

.topnav{
	height:25px;
	width: 75%;
	margin: 20px auto;

}

.topnav a {
padding-right: 50px;
text-decoration: none;
color: rgb(104, 102, 102);

}

.topnav #logopic{
float: right;
}
.headerarea{
height: 500px;
width: 100%;
margin: 25px;


}
#headerimg{
margin-right:463px;
margin-top: 25px;
float:right;

}

#bigtext{
 margin-right: 450px;
 margin-top: 79px;
 font-size: 72px;
 float: right;
 font-family:Knewave;
}

#button{
font-size: 25px;
margin-top: 40px;
display: block;
border: 5px solid black;
text-align: center;
padding: 5px;
width: 75%;
margin-left:40px;

}

body{
width:85%;
margin:50px;
}

p { font-size: 18px;

}

.container{
width: 100%;

margin-left: 50px;
height:600px;

}

.features {

width: 47%;
height: 140px;
display:inline-block;
margin-top:20px;
}

.middleimg{
width:100%;
height:250px;
}

.logopic{
width:200px;
}

.thirds{

width: 33%;
height: 140px;
display:inline-block;
margin-top:30px;


}
.contact{
	
	width: 33%;
	height: 140px;
	display:inline-block;
	
	margin-top:50px;

}

#copyright{
margin-left:50px;
text-align: center;
margin-bottom:20px;
display:block;
}

